[gd_scene load_steps=12 format=3 uid="uid://dwl5l7qmdee1l"]

[ext_resource type="PackedScene" uid="uid://cnhfjdygijcxs" path="res://scenes/planet.tscn" id="1_42kci"]
[ext_resource type="Script" path="res://scenes/main_scene.gd" id="1_jbewt"]
[ext_resource type="PackedScene" uid="uid://c7u7f43g7p2u3" path="res://scenes/player_ship.tscn" id="2_ibhwh"]
[ext_resource type="Texture2D" uid="uid://dtx1jw3jo66ak" path="res://gfx/bg.png" id="2_tinw7"]
[ext_resource type="PackedScene" uid="uid://dm476uun7lg3n" path="res://scenes/escape_pod.tscn" id="3_m7557"]
[ext_resource type="AudioStream" uid="uid://cxek0et0hkhph" path="res://sfx/HRC-theme.wav" id="4_k2sar"]
[ext_resource type="PackedScene" uid="uid://tclmx2p4o1jk" path="res://scenes/enemy_ship.tscn" id="4_ujjcv"]
[ext_resource type="AudioStream" uid="uid://cdl3t5q4vwldx" path="res://sfx/enemy_fired.wav" id="7_82opy"]
[ext_resource type="AudioStream" uid="uid://qyf4iw3t6e3" path="res://sfx/enemy_killed.wav" id="8_k6g6o"]
[ext_resource type="AudioStream" uid="uid://dblajk4b5345w" path="res://sfx/game_start.wav" id="9_mvpwp"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_saime"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_jbewt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Skybox" type="ParallaxLayer" parent="ParallaxBackground"]
unique_name_in_owner = true
motion_mirroring = Vector2(1280, 720)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Skybox"]
modulate = Color(1, 1, 1, 0.870588)
scale = Vector2(2, 2)
texture = ExtResource("2_tinw7")
centered = false

[node name="Boundaries" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-45, 767)
shape = SubResource("WorldBoundaryShape2D_saime")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-45, 767)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_saime")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(1316, -38)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_saime")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(1316, -38)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_saime")

[node name="Planet" parent="." instance=ExtResource("1_42kci")]
position = Vector2(668, 842)
scale = Vector2(4, 4)

[node name="PlanetEnemyTarget" type="Marker2D" parent="Planet"]
position = Vector2(0, -35)

[node name="EnemySpawnPoints" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(17, -47)

[node name="Marker2D2" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(145, -47)

[node name="Marker2D3" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(261, -47)

[node name="Marker2D4" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(396, -47)

[node name="Marker2D5" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(528, -47)

[node name="Marker2D6" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(656, -47)

[node name="Marker2D7" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(773, -47)

[node name="Marker2D8" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(900, -47)

[node name="Marker2D9" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(1016, -47)

[node name="Marker2D10" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(1124, -47)

[node name="Marker2D11" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(1244, -47)

[node name="Marker2D12" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(1336, -20)

[node name="Marker2D13" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(-56, -10)

[node name="Marker2D15" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(-56, 79)

[node name="Marker2D16" type="Marker2D" parent="EnemySpawnPoints"]
position = Vector2(1343, 75)

[node name="Enemies" type="Node2D" parent="."]

[node name="EscapePod" parent="Enemies" instance=ExtResource("3_m7557")]
position = Vector2(476, 238)

[node name="EnemyShip" parent="Enemies" instance=ExtResource("4_ujjcv")]
position = Vector2(219, 297)

[node name="Projectiles" type="Node2D" parent="."]

[node name="PlayerShip" parent="." instance=ExtResource("2_ibhwh")]
position = Vector2(664, 557)

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_k2sar")
volume_db = 4.0
autoplay = true

[node name="ScoreTicker" type="Timer" parent="."]
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="EnemyShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_82opy")
volume_db = -10.0
max_polyphony = 3

[node name="EnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_k6g6o")
max_polyphony = 3

[node name="GameStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mvpwp")
autoplay = true

[node name="SyncedShot" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[connection signal="enemy_entered" from="Planet" to="." method="_on_planet_enemy_entered"]
[connection signal="timeout" from="ScoreTicker" to="." method="_on_score_ticker_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="SyncedShot" to="." method="_on_synced_shot_timeout"]
